--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
       
         <footer>
-            Made with ❤️ in London.
+            Made with ❤️ in Kota.
         </footer>
 
 
